[tool.poetry]
name = "radix-gerador-graficos"
version = "0.1.0"
description = ""
authors = ["Guilherme Alvarenga <gui.alvarengas234@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
seaborn = "^0.13.2"
plotly = "^5.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
